# pyccx

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml  pythonapp.yml  pythonpublish.yml
docs/: conf.py  index.rst  modules.rst  requirements.txt
examples/: example.py  example_thermal.py
models/: cornerCube.step
pyccx/: __init__.py  analysis.py  boundarycondition.py  core.py  loadcase.py  material.py  results.py  version.py
pyccx/analysis/: __init__.py  analysis.py
pyccx/bc/: __init__.py  boundarycondition.py
pyccx/loadcase/: __init__.py  loadcase.py
pyccx/material/: __init__.py  material.py
pyccx/mesh/: __init__.py  elements.py  mesh.py  mesher.py  utils.py
pyccx/results/: __init__.py  results.py
pyccx/utils/: __init__.py  exporters.py
tests/: context.py  test_advanced.py  test_basic.py
tests/core/: test_core.py
